-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.9.2
-
Fix Version/s: 0.9.3
-
Component/s: C++ - Library
-
Labels:None
-
Environment:
Visual Studio 2010
Thrift no longer compiles under C++03, given the recent fix for THRIFT-2937. This is due to the way a field is initialized with a default value.
The compilation error:
Error 1 error C2864: 'apache::thrift::transport::TFramedTransport::maxFrameSize_' : only static const integral data members can be initialized within a class D:\dev\thrift\lib\cpp\src\thrift\transport\TBufferTransports.h 404 1 thrift_static