THRIFT-3020:Repair CPP11 init of member in TFramedTrans Client: CPP Patch: Zachary Sims

Github Pull Request:
This closes #384
commit dacbee68444aeded794ff445559367b538113c91
Author: Zachary Sims <z.sims@qsr.com.au>
Date: 2015-03-03T05:12:31Z
Removes C++11-style field initialisation in TBufferTransports.h